--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/fuse.js/dist/fuse.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
-  <script async defer src="https://apis.google.com/js/api.js"></script>
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
+
   <script defer type="module" src="./index.js"></script>
   
 </head>
@@ -21,9 +22,8 @@
 </header>
 
 
-
-
 <body>
+  
   <div class="container-fluid row">
     <section id="map" class="col-md-8"></section>
   
@@ -63,6 +63,7 @@
           <button id="openModalButton" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal">
             Add Current Location
           </button>
+          <div id="g_id_signin" data-type="standard"></div>
         </nav>
 
         <div class="form-group">
@@ -172,21 +173,6 @@
     </section>
   </div>
 
-  <!-- prettier-ignore 
-  <script>
-    // Poor Man's Auth check
-    window.onload = function() {
-      const secretToken = 'YOUR_SECRET_TOKEN'; // Replace with your secret token
-      const queryString = window.location.search;
-      const urlParams = new URLSearchParams(queryString);
-      const token = urlParams.get('token');
-      
-      if (token !== secretToken) {
-        window.location.href = 'https://www.example.com'; // Redirect to your public company page or a 'not found' page
-      }
-    }
-  </script>
-  -->
   <script>
     (g => {
       // Variable declarations
@@ -233,7 +219,6 @@
       libraries: "places" // Add this line
     });
   </script>
-  <script type="module" src="./modal-handler.js"></script>
 </body>
 </html>
 
